--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,9 +4,11 @@
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
 {% block branding %}
-    <h1 id="site-name">
-        <span class="icon-jet"></span> {% trans "Panel regain" %}
-    </h1>
+   <h1 id="site-name">
+    <a href="{% url 'admin:index' %}">
+        <img src="http://portale.regain-ad.com/wp-content/uploads/2018/04/logo-ritagliato-con-freccia-23-1.png" height="60px" />
+    </a>
+</h1>
 {% endblock %}
 
 {% block extrastyle %}
