--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -7,9 +7,31 @@
 
 {% block nav-global %}{% endblock %}
 
-{% block content_title %}{% endblock %}
+{% block content_title %} 
+
+<div>
+   <table width=40 align="center" valign="center">
+   <tr><td>
+      <img width=100 src="http://portale.regain-ad.com/wp-content/uploads/2018/04/logo-ritagliato-con-freccia-23-1.png"/>
+   </td></tr>
+   </table>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+ {% endblock %}
 
 {% block breadcrumbs %}{% endblock %}
+
 
 {% block extrastyle %}
     {{ block.super }}
@@ -17,10 +39,7 @@
 {% endblock %}
 
 {% block content %}
-<ul class="messagelist">
-    <h1 align="center">Login to Web App</h1>
-    
-</ul>
+
 
 {% if form.errors and not form.non_field_errors %}
 <p class="errornote">
